--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -4,7 +4,7 @@
   leave_modal_form_action='/calendar/bookleave/'
 }}
 
-<footer class="footer custom-footer">
+{{!-- <footer class="footer custom-footer">
   <p>
     <span class="pull-left">© <a href="http://timeoff.management">TimeOff.management</a> 2014-2022</span>
     <span class="pull-right">
@@ -13,4 +13,4 @@
       <a href="mailto:pavlo@timeoff.management"><i class="fa fa-envelope fa-lg"></i></a>
     </span>
   </p>
-</footer>
+</footer> --}}
